--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test mocha spec/",
-    "start": "nodemon listen.js",
-    "seed-dev": "node ./seed/seed.dev.js",
-    "dev": "npm run seed-dev && nodemon listen.js"
+    "start": "node listen.js",
+    "seed-dev": "NODE_ENV=development node ./seed/seed.dev.js",
+    "dev": "npm run seed-dev && nodemon listen.js",
+    "seed:prod": "NODE_ENV=production node ./seed/seed.dev.js"
   },
   "author": "",
   "license": "ISC",
