--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "NODE_ENV=test mocha spec/",
     "start": "node listen.js",
-    "seed-dev": "NODE_ENV=development node ./seed/seed.dev.js",
-    "dev": "npm run seed-dev && nodemon listen.js",
+    "seed:dev": "node ./seed/seed.dev.js",
+    "dev": "nodemon listen.js",
     "seed:prod": "NODE_ENV=production node ./seed/seed.dev.js"
   },
   "author": "",
