--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "northcoders-news-api",
+  "name": "news-today-api",
   "version": "1.0.0",
-  "description": "Northcoders News API Sprint",
+  "description": "News Today API Sprint",
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test mocha spec/",
